--- a/CPP01/ex04/Makefile
+++ b/CPP01/ex04/Makefile
@@ -5,40 +5,36 @@
 #                                                     +:+ +:+         +:+      #
 #    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2023/12/21 19:12:57 by afalconi          #+#    #+#              #
-#    Updated: 2023/12/25 21:55:48 by afalconi         ###   ########.fr        #
+#    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
+#    Updated: 2023/12/27 16:19:29 by afalconi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CFILES = HumanA.cpp \
-         HumanB.cpp \
-         main.cpp \
-         Weapon.cpp
 
-OBJ = $(CFILES:.cpp=.o)
+NAME	=	replace
+SRCS	=	file.cpp \
+			main.cpp \
+			parser.cpp \
 
-CC = @g++
-FLAGS = -g -Wall -Wextra -Werror -std=c++98 -arch x86_64
-RM = rm -rf
+OBJS	= $(SRCS:.cpp=.o)
+CC		= c++
+FLAGS	= -std=c++98 -arch x86_64 -Wall -Werror -Wextra
+RM		= rm -rf
 
-NAME = my_program
+%.o: %.cpp
+	$(CC) $(FLAGS) -c $< -o $(<:.cpp=.o)
 
-name: $(NAME)
+$(NAME): $(OBJS)
+	$(CC) $(FLAGS) $(OBJS) -o $(NAME)
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(CC) $(FLAGS) $(OBJ) -o $(NAME)
-
-main.o: main.cpp HumanA.o HumanB.o
-HumanA.o: HumanA.cpp HumanA.hpp
-HumanB.o: HumanB.cpp HumanB.hpp
-Weapon.o: Weapon.cpp Weapon.hpp
-
 clean:
-	@$(RM) $(OBJ)
+	$(RM) $(OBJS)
 
 fclean: clean
-	@$(RM) $(NAME)
+	$(RM) $(NAME)
 
 re: fclean all
+
+.PHONY: all clean fclean re
