--- a/CPP03/ex03/Makefile
+++ b/CPP03/ex03/Makefile
@@ -12,7 +12,7 @@
 
 
 NAME	=	a.out
-SRCS	=	main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp;
+SRCS	=	main.cpp ClapTrap.cpp ScavTrap.cpp FragTrap.cpp DiamondTrap.cpp
 
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
