--- a/CPP04/ex01/Makefile
+++ b/CPP04/ex01/Makefile
@@ -6,13 +6,13 @@
 #    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
-#    Updated: 2024/02/16 03:10:22 by afalconi         ###   ########.fr        #
+#    Updated: 2024/02/16 06:54:40 by afalconi         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 
 NAME	=	a.out
-SRCS	=	main.cpp  Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp
+SRCS	=	main.cpp  Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
 
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
