--- a/CPP00/ex02/Makefile
+++ b/CPP00/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
+#    By: root <root@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
-#    Updated: 2023/12/25 21:56:02 by afalconi         ###   ########.fr        #
+#    Updated: 2024/04/30 17:32:29 by root             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ NAME	= test
 SRCS	= tests.cpp Account.cpp
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
-FLAGS	= -std=c++98 -arch x86_64 -Wall -Werror -Wextra
+FLAGS	= -std=c++98   -Wall -Werror -Wextra
 RM		= rm -rf
 
 %.o: %.cpp
