--- a/CPP01/ex03/Makefile
+++ b/CPP01/ex03/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
+#    By: root <root@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/21 19:12:57 by afalconi          #+#    #+#              #
-#    Updated: 2023/12/25 21:55:48 by afalconi         ###   ########.fr        #
+#    Updated: 2024/04/30 17:32:29 by root             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,7 +18,7 @@ CFILES = HumanA.cpp \
 OBJ = $(CFILES:.cpp=.o)
 
 CC = @g++
-FLAGS = -g -Wall -Wextra -Werror -std=c++98 -arch x86_64
+FLAGS = -g -Wall -Wextra -Werror -std=c++98
 RM = rm -rf
 
 NAME = my_program
