--- a/CPP04/ex01/Makefile
+++ b/CPP04/ex01/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
+#    By: root <root@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
-#    Updated: 2024/02/16 06:54:40 by afalconi         ###   ########.fr        #
+#    Updated: 2024/04/30 17:32:29 by root             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ SRCS	=	main.cpp  Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp Brain.c
 
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
-FLAGS	= -std=c++98 -arch x86_64 -Wall -Werror -Wextra -Wno-shadow -Wshadow
+FLAGS	= -std=c++98   -Wall -Werror -Wextra -Wno-shadow -Wshadow
 RM		= rm -rf
 
 %.o: %.cpp
