--- a/CPP05/ex00/Makefile
+++ b/CPP05/ex00/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: afalconi <afalconi@student.42roma.it>      +#+  +:+       +#+         #
+#    By: root <root@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
-#    Updated: 2024/03/10 15:28:05 by afalconi         ###   ########.fr        #
+#    Updated: 2024/04/30 17:30:46 by root             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ SRCS	=	main.cpp Bureaucrat.cpp
 
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
-FLAGS	= -std=c++98 -arch x86_64 -Wall -Werror -Wextra -Wno-shadow -Wshadow
+FLAGS	= -std=c++98 -Wall -Werror -Wextra -Wno-shadow -Wshadow
 RM		= rm -rf
 
 %.o: %.cpp
