--- a/CPP05/ex02/Makefile
+++ b/CPP05/ex02/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: afalconi <afalconi@student.42.fr>          +#+  +:+       +#+         #
+#    By: root <root@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/25 21:50:34 by afalconi          #+#    #+#              #
-#    Updated: 2024/03/14 18:29:50 by afalconi         ###   ########.fr        #
+#    Updated: 2024/04/30 17:42:42 by root             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,8 +21,7 @@ SRCS	=	AForm.cpp \
 
 OBJS	= $(SRCS:.cpp=.o)
 CC		= c++
-FLAGS	= -std=c++98 -arch x86_64 -Wall -Werror -Wextra -Wno-shadow -Wshadow
-RM		= rm -rf
+FLAGS	= -std=c++98 -Wall -Werror -Wextra
 
 %.o: %.cpp
 	$(CC) $(FLAGS) -c $< -o $(<:.cpp=.o)
